// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-plugin-dash use-global 1`] = `
"import {useGlobal} from '@dash-ui/react'

// useGlobal(\\"html{display:flex;}\\")
const variant = useGlobal\`html { display: flex; } \`
// useGlobal(\\"html{display:flex;}\\")
const variant0 = useGlobal('html { display: flex; } ')
// \\"html{color:\\"+color.red+\\";}\\"
const variant1 = useGlobal(
  ({color}) => \`
    html {
      color: \${color.red};
    }
  \`
)
// {html: {color: color.blue}}
const variant2 = useGlobal({
  html: {
    color: color.blue,
  },
})
// \\"html{color:\\"+color.yellow+\\";}\\"
const variant3 = useGlobal(({color}) => {
  return \`
    html { 
      color: \${color.yellow}; 
    }
  \`
})
// \\"html{color:\\"+color.green+\\";}\\"
const variant4 = useGlobal(({color}) => {
  return {
    html: {
      color: color.green,
    },
  }
})
// if (IS_PROD) return \\"html{color:\\"+color.pink+\\";}\\"
// return \\"html{color:\\"+color.yellow+\\";}\\"
const variant5 = useGlobal(({color}) => {
  if (IS_PROD) {
    return \`html { color: \${color.pink}; }\`
  }
  return \`html { color: \${color.yellow}; }\`
})
// if (IS_PROD) return \\"html{color:\\"+color.lightBlue+\\";}\\"
// return \\"html{color:\\"+color.yellow+\\";}\\"

const variant6 = useGlobal(({color}) => {
  if (IS_PROD) {
    return {
      html: {
        color: color.lightBlue,
      },
    }
  }
  return {
    html: {
      color: color.yellow,
    },
  }
})
// return \\"html{height\\"+vh+\\";}\\"
const variant7 = useGlobal(({vh}) => {
  return {
    html: {
      height: vh,
    },
  }
})


      ↓ ↓ ↓ ↓ ↓ ↓

import { useGlobal } from '@dash-ui/react'; // useGlobal(\\"html{display:flex;}\\")

const variant = useGlobal(\\"html{display:flex;}\\"); // useGlobal(\\"html{display:flex;}\\")

const variant0 = useGlobal(\\"html{display:flex;}\\"); // \\"html{color:\\"+color.red+\\";}\\"

const variant1 = useGlobal(({
  color
}) => \\"html{color:\\" + color.red + \\";}\\"); // {html: {color: color.blue}}

const variant2 = useGlobal({
  html: {
    color: color.blue
  }
}); // \\"html{color:\\"+color.yellow+\\";}\\"

const variant3 = useGlobal(({
  color
}) => {
  return \\"html{color:\\" + color.yellow + \\";}\\";
}); // \\"html{color:\\"+color.green+\\";}\\"

const variant4 = useGlobal(({
  color
}) => {
  return \\"html{\\" + (\\"color:\\" + (color.green + \\";\\") + \\"}\\");
}); // if (IS_PROD) return \\"html{color:\\"+color.pink+\\";}\\"
// return \\"html{color:\\"+color.yellow+\\";}\\"

const variant5 = useGlobal(({
  color
}) => {
  if (IS_PROD) {
    return \\"html{color:\\" + color.pink + \\";}\\";
  }

  return \\"html{color:\\" + color.yellow + \\";}\\";
}); // if (IS_PROD) return \\"html{color:\\"+color.lightBlue+\\";}\\"
// return \\"html{color:\\"+color.yellow+\\";}\\"

const variant6 = useGlobal(({
  color
}) => {
  if (IS_PROD) {
    return \\"html{\\" + (\\"color:\\" + (color.lightBlue + \\";\\") + \\"}\\");
  }

  return \\"html{\\" + (\\"color:\\" + (color.yellow + \\";\\") + \\"}\\");
}); // return \\"html{height\\"+vh+\\";}\\"

const variant7 = useGlobal(({
  vh
}) => {
  return \\"html{\\" + (\\"height:\\" + (vh + \\";\\") + \\"}\\");
});"
`;

exports[`babel-plugin-dash use-style 1`] = `
"import {useStyle} from '@dash-ui/react'

// useStyle(\\"display:flex;\\")
const variant = useStyle\`display: flex;\`
// \\"display:flex;\\"
const variant0 = useStyle('display: flex;')
// \\"color:\\"+color.red+\\";\\"
const variant1 = useStyle(
  ({color}) => \`
    color: \${color.red};
  \`
)
// {color: color.blue}
const variant2 = useStyle({
  color: color.blue,
})
// \\"color:\\"+color.yellow+\\";\\"
const variant3 = useStyle(({color}) => {
  return \`color: \${color.yellow};\`
})
// \\"color:\\"+color.green+\\";\\"
const variant4 = useStyle(({color}) => {
  return {
    color: color.green,
  }
})
// if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"
const variant5 = useStyle(({color}) => {
  if (IS_PROD) {
    return \`color: \${color.pink};\`
  }
  return \`color: \${color.yellow};\`
})
// if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant6 = useStyle(({color}) => {
  if (IS_PROD) {
    return {
      color: color.lightBlue,
    }
  }
  return {
    color: color.yellow,
  }
})
// return \\"height\\"+vh+\\";\\"
const variant7 = useStyle(({vh}) => {
  return {
    height: vh,
  }
})


      ↓ ↓ ↓ ↓ ↓ ↓

import { useStyle } from '@dash-ui/react'; // useStyle(\\"display:flex;\\")

const variant = /*#__PURE__*/useStyle(\\"display:flex;\\"); // \\"display:flex;\\"

const variant0 = /*#__PURE__*/useStyle(\\"display:flex;\\"); // \\"color:\\"+color.red+\\";\\"

const variant1 = /*#__PURE__*/useStyle(({
  color
}) => \\"color:\\" + color.red + \\";\\"); // {color: color.blue}

const variant2 = /*#__PURE__*/useStyle({
  color: color.blue
}); // \\"color:\\"+color.yellow+\\";\\"

const variant3 = /*#__PURE__*/useStyle(({
  color
}) => {
  return \\"color:\\" + color.yellow + \\";\\";
}); // \\"color:\\"+color.green+\\";\\"

const variant4 = /*#__PURE__*/useStyle(({
  color
}) => {
  return \\"color:\\" + (color.green + \\";\\");
}); // if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant5 = /*#__PURE__*/useStyle(({
  color
}) => {
  if (IS_PROD) {
    return \\"color:\\" + color.pink + \\";\\";
  }

  return \\"color:\\" + color.yellow + \\";\\";
}); // if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
// return \\"color:\\"+color.yellow+\\";\\"

const variant6 = /*#__PURE__*/useStyle(({
  color
}) => {
  if (IS_PROD) {
    return \\"color:\\" + (color.lightBlue + \\";\\");
  }

  return \\"color:\\" + (color.yellow + \\";\\");
}); // return \\"height\\"+vh+\\";\\"

const variant7 = /*#__PURE__*/useStyle(({
  vh
}) => {
  return \\"height:\\" + (vh + \\";\\");
});"
`;

exports[`babel-plugin-dash use-styles 1`] = `
"import {useStyles} from '@dash-ui/react'

const cls = useStyles({
  // display:flex;
  default: 'display: flex;',
  // \\"color:\\"+color.red+\\";\\"
  colorRed: ({color}) => \`
    color: \${color.red};
  \`,
  // \\"color:\\"+color.blue+\\";\\"
  colorBlue: ({color}) => ({
    color: color.blue,
  }),
  // \\"color:\\"+color.yellow+\\";\\"
  colorYellow: ({color}) => {
    return \`color: \${color.yellow};\`
  },
  // \\"color:\\"+color.green+\\";\\"
  colorGreen: ({color}) => {
    return {
      color: color.green,
    }
  },
  // if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
  // return \\"color:\\"+color.yellow+\\";\\"
  colorProdPink: ({color}) => {
    if (IS_PROD) {
      return \`color: \${color.pink};\`
    }
    return \`color: \${color.yellow};\`
  },
  // if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
  // return \\"color:\\"+color.yellow+\\";\\"
  colorLightBlue: ({color}) => {
    if (IS_PROD) {
      return {
        color: color.lightBlue,
      }
    }
    return {
      color: color.yellow,
    }
  },
  // return \\"height\\"+vh+\\";\\"
  vh: ({vh}) => {
    return {
      height: vh,
    }
  },
})


      ↓ ↓ ↓ ↓ ↓ ↓

import { useStyles } from '@dash-ui/react';
const cls = /*#__PURE__*/useStyles({
  // display:flex;
  default: \\"display:flex;\\",
  // \\"color:\\"+color.red+\\";\\"
  colorRed: ({
    color
  }) => \\"color:\\" + color.red + \\";\\",
  // \\"color:\\"+color.blue+\\";\\"
  colorBlue: ({
    color
  }) => \\"color:\\" + (color.blue + \\";\\"),
  // \\"color:\\"+color.yellow+\\";\\"
  colorYellow: ({
    color
  }) => {
    return \\"color:\\" + color.yellow + \\";\\";
  },
  // \\"color:\\"+color.green+\\";\\"
  colorGreen: ({
    color
  }) => {
    return \\"color:\\" + (color.green + \\";\\");
  },
  // if (IS_PROD) return \\"color:\\"+color.pink+\\";\\"
  // return \\"color:\\"+color.yellow+\\";\\"
  colorProdPink: ({
    color
  }) => {
    if (IS_PROD) {
      return \\"color:\\" + color.pink + \\";\\";
    }

    return \\"color:\\" + color.yellow + \\";\\";
  },
  // if (IS_PROD) return \\"color:\\"+color.lightBlue+\\";\\"
  // return \\"color:\\"+color.yellow+\\";\\"
  colorLightBlue: ({
    color
  }) => {
    if (IS_PROD) {
      return \\"color:\\" + (color.lightBlue + \\";\\");
    }

    return \\"color:\\" + (color.yellow + \\";\\");
  },
  // return \\"height\\"+vh+\\";\\"
  vh: ({
    vh
  }) => {
    return \\"height:\\" + (vh + \\";\\");
  }
});"
`;
